home content fixed on mobile

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -32,5 +32,7 @@
     
     .home-content{
         width: 90%;
+        height: 100%;
+        margin-top: 5rem;
     }
   }
